<resources>
    <string name="app_name">Guess the Word</string>
    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="end_game">End game</string>
    <string name="word_is">The word is…</string>
    <string name="no_more_words">No more words!</string>
    <string name="end_of_game">Game has just finished.</string>
    <string name="right_words">Right Words:</string>
    <string name="wrong_words">Wrong Words:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="indicate_word">Indica la palabra a insertar:</string>
    <string name="apple">Ejemplo: manzana</string>
    <string name="insert">Insertar</string>
    <string name="back">Volver</string>
    <string name="insert_word">Insertar palabra</string>
    <string name="word_is_empty">La palabra está vacía.</string>
    <string name="inserted_word">La palabra \'%s\' ha sido insertada.</string>
    <string name="allready_exist_word">La palabra \'%s\' ya existe.</string>
    <string name="name">Nombre:</string>
    <string name="save">Guardar</string>
    <string name="history_games">HISTÓRICO DE PARTIDAS</string>
    <string name="date">Fecha</string>
    <string name="name_no_points">Name</string>
    <string name="score">Puntuación</string>
    <string name="no_name">No has introducido el nombre.</string>
    <string name="saved_game">¡Juego guardado!</string>
    <string name="username">Nombre de usuario:</string>
    <string name="user">Usuario...</string>
    <string name="level">Seleccione el nivel</string>
    <string name="easy">Fácil</string>
    <string name="normal">Normal</string>
    <string name="hard">Difícil</string>
    <string name="level_setted">Nivel: %s</string>
    <string name="num_word">Palabra %d de %d.</string>
</resources>